--- a/rpt/hmis105_opd_by_diagnosis.jrxml
+++ b/rpt/hmis105_opd_by_diagnosis.jrxml
@@ -215,7 +215,7 @@ order by diseasetype, disease]]></queryString>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 </box>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
-						<font fontName="SansSerif" pdfFontName="Helvetica" size="11" isBold="false"/>
+						<font fontName="SansSerif" size="11" isBold="false"/>
 					</textElement>
 				<text><![CDATA[Month:]]></text>
 				</staticText>
@@ -235,7 +235,7 @@ order by diseasetype, disease]]></queryString>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 </box>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
-						<font fontName="SansSerif" pdfFontName="Helvetica" size="11" isBold="false"/>
+						<font fontName="SansSerif" size="11" isBold="false"/>
 					</textElement>
 				<text><![CDATA[Year:]]></text>
 				</staticText>
